ecommerce minor changes added Imported from Changeset 2228

--- a/WarehouseEcommerce/Areas/Shop/Views/Home/Index.cshtml
+++ b/WarehouseEcommerce/Areas/Shop/Views/Home/Index.cshtml
@@ -10,7 +10,7 @@
                 @Html.Action("_TopProductBannerPartial")
                 @Html.Action("_OnSalePartial")
                 @Html.Action("_SpecialProductPartial")
-                @Html.Partial("_TopCategoryPartial")
+                @Html.Action("_TopCategoryPartial")
             </div>
         </div>
     </div>
