--- a/WarehouseEcommerce/Areas/Shop/Views/Shared/_TopHeaderPartial.cshtml
+++ b/WarehouseEcommerce/Areas/Shop/Views/Shared/_TopHeaderPartial.cshtml
@@ -84,7 +84,7 @@
                             <div class="hover-cate">
                                  <p><span class="cate-selected" data-value="0">All Categories</span></p>
                                  <ul class="cate-items">
-                                     @*@Html.DropDownList("ProductGroups", ViewBag.ProductGroups as SelectList, "All Categories", htmlAttributes: new { @class = "" })*@
+                                     @Html.DropDownList("ProductGroups", ViewBag.ProductGroups as SelectList, "All Categories", htmlAttributes: new { @class = "" })
 
                                  </ul>
 
