--- a/WarehouseEcommerce/Areas/Shop/Views/Shared/_OnSalePartial.cshtml
+++ b/WarehouseEcommerce/Areas/Shop/Views/Shared/_OnSalePartial.cshtml
@@ -62,7 +62,7 @@
                                                 <span class="fa fa-stack"><i class="fa fa-star-o fa-stack-2x"></i></span>
                                             </div>
                                             <div class="button-group">
-                                                <button type="button" onclick="cart.add('43');" class="acart">
+                                                <button type="button" onclick="AddToCart(@product[i].ProductId)" class="acart">
                                                     <span>Add to Cart</span>
                                                 </button>
                                             </div>
@@ -117,7 +117,7 @@
                                                 <span class="fa fa-stack"><i class="fa fa-star-o fa-stack-2x"></i></span>
                                             </div>
                                             <div class="button-group">
-                                                <button type="button" onclick="cart.add('43');" class="acart">
+                                                <button type="button" onclick="AddToCart(@product[i+1].ProductId)" class="acart">
                                                     <span>Add to Cart</span>
                                                 </button>
                                             </div>
