--- a/WarehouseEcommerce/Areas/Shop/Views/Shared/_TopProductPartial.cshtml
+++ b/WarehouseEcommerce/Areas/Shop/Views/Shared/_TopProductPartial.cshtml
@@ -66,7 +66,7 @@
                                         </div>
                                         <div class="clearfix"></div>
                                         <div class="button-group">
-                                            <button type="button" class="acart">
+                                            <button type="button" class="acart" onclick="AddToCart(@item.ProductId)">
                                                 <span>Add to Cart</span>
                                             </button>
                                         </div>
