--- a/WMS/Views/Assets/Details.cshtml
+++ b/WMS/Views/Assets/Details.cshtml
@@ -14,96 +14,115 @@
 @{
     ViewBag.Title = "Details";
 }
-<div class="col-md-12">
-    <h2><span>Asset Details</span></h2>
-    <div class="col-md-4 pl-0 pull-left">
-        <h2><span>Details</span></h2>
-        <dl class="dl-horizontal">
-            <dt>
-                @Html.DisplayNameFor(model => model.AssetName)
-            </dt>
+    <div class="col-md-12">
+        @if (Model != null)
+        {
+            <h2><span>Asset Details</span></h2>
+            <div class="col-md-4 pl-0 pull-left">
+                <h2><span>Details</span></h2>
+                <dl class="dl-horizontal">
+                    <dt>
+                        @Html.DisplayNameFor(model => model.AssetName)
+                    </dt>
 
-            <dd>
-                @Html.DisplayFor(model => model.AssetName)
-            </dd>
+                    <dd>
+                        @Html.DisplayFor(model => model.AssetName)
+                    </dd>
 
-            <dt>
-                @Html.DisplayNameFor(model => model.AssetDescription)
-            </dt>
+                    <dt>
+                        @Html.DisplayNameFor(model => model.AssetDescription)
+                    </dt>
 
-            <dd>
-                @Html.DisplayFor(model => model.AssetDescription)
-            </dd>
+                    <dd>
+                        @Html.DisplayFor(model => model.AssetDescription)
+                    </dd>
 
-            <dt>
-                @Html.DisplayNameFor(model => model.AssetCode)
-            </dt>
+                    <dt>
+                        @Html.DisplayNameFor(model => model.AssetCode)
+                    </dt>
 
-            <dd>
-                @Html.DisplayFor(model => model.AssetCode)
-            </dd>
+                    <dd>
+                        @Html.DisplayFor(model => model.AssetCode)
+                    </dd>
 
-            <dt>
-                @Html.DisplayNameFor(model => model.AssetTag)
-            </dt>
+                    <dt>
+                        @Html.DisplayNameFor(model => model.AssetTag)
+                    </dt>
 
-            <dd>
-                @Html.DisplayFor(model => model.AssetTag)
-            </dd>
+                    <dd>
+                        @Html.DisplayFor(model => model.AssetTag)
+                    </dd>
 
-            <dt>
-                @Html.DisplayNameFor(model => model.DateCreated)
-            </dt>
+                    <dt>
+                        @Html.DisplayNameFor(model => model.DateCreated)
+                    </dt>
 
-            <dd>
-                @DateTimeToLocal.Convert(Model.DateCreated, ViewBag.TimeZone)
+                    <dd>
+                        @DateTimeToLocal.Convert(Model.DateCreated, ViewBag.TimeZone)
 
-            </dd>
+                    </dd>
 
-            <dt>
-                @Html.DisplayNameFor(model => model.DateUpdated)
-            </dt>
+                    <dt>
+                        @Html.DisplayNameFor(model => model.DateUpdated)
+                    </dt>
 
-            <dd>
-                @DateTimeToLocal.Convert(Model.DateUpdated, ViewBag.TimeZone)
+                    <dd>
+                        @DateTimeToLocal.Convert(Model.DateUpdated, ViewBag.TimeZone)
 
-            </dd>
+                    </dd>
 
-            <dt>
-                @Html.DisplayNameFor(model => model.CreatedBy)
-            </dt>
+                    <dt>
+                        @Html.DisplayNameFor(model => model.CreatedBy)
+                    </dt>
 
-            <dd>
-                @LayoutHelpers.GetUserName(Model.CreatedBy)
-            </dd>
+                    <dd>
+                        @LayoutHelpers.GetUserName(Model.CreatedBy)
+                    </dd>
 
-            <dt>
-                @Html.DisplayNameFor(model => model.UpdatedBy)
-            </dt>
+                    <dt>
+                        @Html.DisplayNameFor(model => model.UpdatedBy)
+                    </dt>
 
-            <dd>
-                @LayoutHelpers.GetUserName(Model.UpdatedBy)
-            </dd>
+                    <dd>
+                        @LayoutHelpers.GetUserName(Model.UpdatedBy)
+                    </dd>
 
-            <dt>
-                @Html.DisplayNameFor(model => model.IsActive)
-            </dt>
+                    <dt>
+                        @Html.DisplayNameFor(model => model.IsActive)
+                    </dt>
 
-            <dd>
-                @Html.DisplayFor(model => model.IsActive)
-            </dd>
+                    <dd>
+                        @Html.DisplayFor(model => model.IsActive)
+                    </dd>
 
-        </dl>
+                </dl>
+            </div>
+        }
+
+
+
+        @if (Model == null)
+        {
+            <h2><span>Assets Log</span></h2>
+            @Html.Action("_AssetLog")
+        }
+        else
+        {
+            <div class="col-md-8 p-0 pull-left">
+                <h2><span>Assets Log</span></h2>
+                @Html.Action("_AssetLog", new { id = Model.AssetId })
+            </div>
+
+        }
     </div>
-    <div class="col-md-8 p-0 pull-left">
-        <h2><span>Assets Log</span></h2>
-        @Html.Action("_AssetLog", new { id = Model.AssetId })
-    </div>
-</div>
+
 
 <div class="input-group h-100 justify-content-center align-items-center">
     <div class="col-md-offset-2 col-md-10 bottom-right">
-        @Html.ActionLink("Edit", "Edit", new { id = Model.AssetId }, new { @class = "btn btn-primary" })
+        @if (Model != null)
+        {
+            @Html.ActionLink("Edit", "Edit", new { id = Model.AssetId }, new { @class = "btn btn-primary" })
+        }
         <div class="back-list">@Html.ActionLink("Back to List", "Index", null, new { @class = "btn btn-default" })</div>
     </div>
 </div>
