--- a/WMS/Views/Account/Edit.cshtml
+++ b/WMS/Views/Account/Edit.cshtml
@@ -162,6 +162,13 @@
                         @Html.ValidationMessageFor(model => model.TaxID)
                     </div>
                 </div>
+                <div class="input-group h-100 justify-content-center align-items-center">
+                    @Html.LabelFor(model => model.AcceptedShelfLife, htmlAttributes: new { @class = "col-md-4" })
+                    <div class="col-md-8">
+                        @Html.EditorFor(model => model.AcceptedShelfLife)
+                        @Html.ValidationMessageFor(model => model.AcceptedShelfLife)
+                    </div>
+                </div>
 
                 <div>
                     <div class="input-group h-100 justify-content-center align-items-center">
@@ -239,6 +246,12 @@
                     @Html.Label("Price Group", htmlAttributes: new { @class = "col-md-4" })
                     <div class="col-md-8">
                         @Html.DropDownListFor(m => m.PriceGroupID, ViewBag.PriceGroups as IEnumerable<SelectListItem>, new { @class = "chosen-select" })
+                    </div>
+                </div>
+                <div class="input-group h-100 justify-content-center align-items-center">
+                    @Html.Label("Owner User", htmlAttributes: new { @class = "col-md-4" })
+                    <div class="col-md-8">
+                        @Html.DropDownList("OwnerUserId", ViewBag.OwnerUsers as IEnumerable<SelectListItem>, new { @class = "chosen-select" })
                     </div>
                 </div>
                 <div class="input-group h-100 justify-content-center align-items-center">
