Random jobs reason included in the grid and report issue reolved Imported from Changeset 2234

--- a/WMS/Views/MarketJob/_GridPartial.cshtml
+++ b/WMS/Views/MarketJob/_GridPartial.cshtml
@@ -37,7 +37,7 @@
         settings.Columns.Add("Id").Width = System.Web.UI.WebControls.Unit.Percentage(5);
         settings.Columns.Add("Name", "Title").Width = System.Web.UI.WebControls.Unit.Percentage(20);
         settings.Columns.Add("Description", "Job Description").Width = System.Web.UI.WebControls.Unit.Percentage(20);
-     ;
+        settings.Columns.Add("Reason", "Reason").Width = System.Web.UI.WebControls.Unit.Percentage(20);
         settings.Columns.Add("MarketJobStatusEnum", "Status").Settings.AllowAutoFilter = DefaultBoolean.False;
         settings.Columns.Add("DisplayText", "Market Route Vehicle").Width = System.Web.UI.WebControls.Unit.Percentage(15);
         settings.Columns.Add(column =>
