--- a/WMS/Views/Account/_AccountList.cshtml
+++ b/WMS/Views/Account/_AccountList.cshtml
@@ -90,6 +90,13 @@
             c.Caption = "Account Balance";
             c.ColumnType = MVCxGridViewColumnType.SpinEdit;
         });
+        settings.Columns.Add(c => {
+
+            c.FieldName = "OwnerName";
+            c.Caption = "Owner Name";
+            c.Settings.AutoFilterCondition = AutoFilterCondition.Contains;
+
+        });
         if (ViewBag.IsVanSalesEnabled)
         {
             settings.Columns.Add(c =>
